--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,17 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Mercato\\": "app/",
-            "Utility\\": "Utility/"
+            "App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "dompdf/dompdf": "^2.0"
-
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
