--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,10 +1,13 @@
 server {
     listen 80;
     index index.php index.html;
-    root /var/www/html/public; # Nginx aponta para a pasta public/ 
+    root /var/www/html/public; # Nginx aponta para a pasta public/
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string; 
+        # Esta linha é crucial:
+        # Tenta servir o $uri como um arquivo. Se não encontrar, passa para /index.php.
+        # Não tenta servir como diretório ($uri/) para evitar 403 Forbidden em rotas da aplicação.
+        try_files $uri /index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -15,7 +18,7 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    # Opcional: Restringir acesso a arquivos sensíveis
+    # Opcional: Restringir acesso a arquivos sensíveis (como arquivos de configuração ocultos)
     location ~ /\. {
         deny all;
     }
